--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+:root {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 #root {
-  max-width: 1280px;
+  width: 100%;
+  max-width: 1500px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
